--- a/app/src/main/res/drawable/add_team_rounded.xml
+++ b/app/src/main/res/drawable/add_team_rounded.xml
@@ -12,10 +12,10 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="#000000"/>
+            <solid android:color="#48FFFFFF"/>
 
             <stroke android:width="2dp"
-                android:color="#000000"/>
+                android:color="#59FFFFFF"/>
 
             <padding android:left="1dp"
                 android:top="1dp"
