--- a/app/src/main/res/layout/fragment_addteam.xml
+++ b/app/src/main/res/layout/fragment_addteam.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/rounded_edit_text">
+        android:background="@drawable/add_team_rounded">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -23,11 +23,11 @@
 
             <LinearLayout
                 android:id="@+id/linearNombreEquipo"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
@@ -39,19 +39,20 @@
                     android:gravity="center_vertical"
                     android:text="@string/nombreequipo"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <EditText
                     android:id="@+id/editNameEquipo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5sp"
                     android:hint="@string/nombreequipo"
                     android:inputType="text"
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
-                    android:textColorHint="#848484"
+                    android:textColor="@color/black"
+                    android:textColorHint="#000000"
                     android:textSize="14sp"
                     android:textStyle="italic" />
 
@@ -60,23 +61,23 @@
 
             <LinearLayout
                 android:id="@+id/linearAnyo"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/anyoEquipo"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/krona_one"
+                    android:gravity="center_vertical"
                     android:text="@string/year"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <EditText
@@ -88,29 +89,29 @@
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
                     android:textColor="@color/white"
-                    android:textColorHint="#848484"
+                    android:textColorHint="#000000"
                     android:textSize="14sp"
                     android:textStyle="italic" />
 
             </LinearLayout>
 
 
-
             <LinearLayout
                 android:id="@+id/linearJugadores"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/makerLinear"
-                >
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/tituloJugadores"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:background="#FF9800"
+                    android:fontFamily="@font/krona_one"
+                    android:paddingVertical="15sp"
                     android:text="@string/jugadores"
                     android:textAlignment="center"
                     android:textAppearance="@android:style/TextAppearance.Medium"
@@ -124,61 +125,61 @@
 
             <LinearLayout
                 android:id="@+id/linearBase"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/nameBase"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/krona_one"
+                    android:gravity="center_vertical"
                     android:text="@string/base"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <AutoCompleteTextView
                     android:id="@+id/editBase"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:completionHint="@string/base"
+                    android:completionThreshold="1"
                     android:hint="@string/base"
                     android:inputType="text"
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
-                    android:textColorHint="#848484"
+                    android:textColor="@color/black"
+                    android:textColorHint="#000000"
                     android:textSize="14sp"
-                    android:textStyle="italic"
-                    android:completionThreshold="1"
-                    android:completionHint="@string/base"/>
+                    android:textStyle="italic" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearEscolta"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/nameEscolta"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/krona_one"
+                    android:gravity="center_vertical"
                     android:text="@string/escolta"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <AutoCompleteTextView
@@ -189,8 +190,8 @@
                     android:inputType="text"
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
-                    android:textColorHint="#848484"
+                    android:textColor="@color/black"
+                    android:textColorHint="#000000"
                     android:textSize="14sp"
                     android:textStyle="italic" />
 
@@ -198,23 +199,23 @@
 
             <LinearLayout
                 android:id="@+id/linearAlero"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/aleroedit"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/krona_one"
+                    android:gravity="center_vertical"
                     android:text="@string/alero"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <AutoCompleteTextView
@@ -225,8 +226,8 @@
                     android:inputType="text"
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
-                    android:textColorHint="#848484"
+                    android:textColor="@color/black"
+                    android:textColorHint="#000000"
                     android:textSize="14sp"
                     android:textStyle="italic" />
 
@@ -234,23 +235,23 @@
 
             <LinearLayout
                 android:id="@+id/linearAlapivot"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/alapivotedit"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/krona_one"
+                    android:gravity="center_vertical"
                     android:text="@string/alapivot"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <AutoCompleteTextView
@@ -261,32 +262,32 @@
                     android:inputType="text"
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
-                    android:textColorHint="#848484"
-                    android:textStyle="italic"
-/>
+                    android:textColor="@color/black"
+                    android:textColorHint="#000000"
+                    android:textSize="14sp"
+                    android:textStyle="italic" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearPivot"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_marginTop="5dp"
+                android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/makerLinear">
 
                 <TextView
                     android:id="@+id/pivotedit"
                     android:layout_width="104dp"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:fontFamily="@font/krona_one"
                     android:layout_marginLeft="10dp"
+                    android:fontFamily="@font/krona_one"
+                    android:gravity="center_vertical"
                     android:text="@string/pivot"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="14sp" />
 
                 <AutoCompleteTextView
@@ -297,8 +298,8 @@
                     android:inputType="text"
                     android:maxLength="24"
                     android:textAppearance="@android:style/TextAppearance.Medium"
-                    android:textColor="@color/white"
-                    android:textColorHint="#848484"
+                    android:textColor="@color/black"
+                    android:textColorHint="#000000"
                     android:textSize="14sp"
                     android:textStyle="italic" />
 
@@ -315,6 +316,7 @@
                     android:id="@+id/imagenFoto"
                     android:layout_width="144dp"
                     android:layout_height="141dp"
+                    android:layout_marginTop="10sp"
                     android:layout_weight="1"
                     android:src="@android:drawable/ic_menu_report_image" />
 
