--- a/app/src/main/res/layout/fragment_buscar_jugador.xml
+++ b/app/src/main/res/layout/fragment_buscar_jugador.xml
@@ -1,31 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:context=".activities.MainActivity">
+    tools:context=".Fragments.BuscarJugador">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <SearchView
-            android:id="@+id/buscadorHome"
+        <EditText
+            android:id="@+id/jugadorBuscado"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="10" />
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Nombre del jugador"
+            android:inputType="textPersonName" />
+
+        <Button
+            android:id="@+id/botonBuscarjugador"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Buscar" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/home"
+            android:id="@+id/recyclerbuscadorjugadores"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/cardviewitem" />
-    </LinearLayout>
+            tools:listitem="@layout/buscarjugadorcard"/>
 
+    </LinearLayout>
 </FrameLayout>
