--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -8,9 +8,9 @@
     <gradient
         android:angle="45"
         android:centerX="35%"
-        android:centerColor="#FFFFFF"
-        android:startColor="#FFFFFF"
-        android:endColor="#FFFFFF"
+        android:centerColor="#FF9800"
+        android:startColor="#FF9800"
+        android:endColor="#FF9800"
         android:type="linear" />
     <solid
         android:color="@android:color/black" />
@@ -21,5 +21,5 @@
         android:bottom="0dp"/>
     <stroke
         android:width="1dp"
-        android:color="#FFFFFF"/>
+        android:color="#FF9800"/>
 </shape>
