--- a/app/src/main/res/layout/cardviewitem.xml
+++ b/app/src/main/res/layout/cardviewitem.xml
@@ -55,8 +55,8 @@
                 android:id="@+id/botonEliminar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="240sp"
-                app:srcCompat="@android:drawable/ic_menu_delete" />
+                android:layout_marginLeft="260sp"
+                android:background="@android:drawable/ic_menu_delete" />
 
         </LinearLayout>
     </LinearLayout>
