--- a/app/src/main/res/layout/fragment_addjugador.xml
+++ b/app/src/main/res/layout/fragment_addjugador.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="280sp"
-        android:background="@drawable/rounded_edit_text" />
+        android:background="@drawable/add_team_rounded" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                 android:gravity="center_vertical"
                 android:text="Nombre:"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <EditText
@@ -44,8 +44,8 @@
                 android:inputType="text"
                 android:maxLength="24"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
-                android:textColorHint="#848484"
+                android:textColor="@color/black"
+                android:textColorHint="#000000"
                 android:textSize="14sp"
                 android:textStyle="italic" />
 
@@ -69,7 +69,7 @@
                 android:gravity="center_vertical"
                 android:text="Posición:"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <EditText
@@ -80,8 +80,8 @@
                 android:inputType="text"
                 android:maxLength="24"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
-                android:textColorHint="#848484"
+                android:textColor="@color/black"
+                android:textColorHint="#000000"
                 android:textSize="14sp"
                 android:textStyle="italic" />
 
@@ -105,7 +105,7 @@
                 android:gravity="center_vertical"
                 android:text="Dorsal:"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <EditText
@@ -116,8 +116,8 @@
                 android:inputType="text"
                 android:maxLength="24"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
-                android:textColorHint="#848484"
+                android:textColor="@color/black"
+                android:textColorHint="#000000"
                 android:textSize="14sp"
                 android:textStyle="italic" />
 
@@ -140,7 +140,7 @@
                 android:gravity="center_vertical"
                 android:text="Edad:"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="14sp" />
 
             <EditText
@@ -151,8 +151,8 @@
                 android:inputType="text"
                 android:maxLength="24"
                 android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@color/white"
-                android:textColorHint="#848484"
+                android:textColor="@color/black"
+                android:textColorHint="#000000"
                 android:textSize="14sp"
                 android:textStyle="italic" />
 
