--- a/app/src/main/res/layout/fragment_mi_cuenta.xml
+++ b/app/src/main/res/layout/fragment_mi_cuenta.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/add_team_rounded"
     tools:context=".Fragments.MiCuenta">
 
     <LinearLayout
@@ -13,69 +14,112 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="425dp"
-            android:layout_weight="1"
-            android:background="@drawable/border"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/border"
-                android:src="@android:drawable/ic_menu_myplaces" />
-
-            <TextView
-                android:id="@+id/idPerfil"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
-                android:layout_weight="1"
-                android:fontFamily="@font/krona_one"
-                android:text="Mi Perfil"
-                android:textAlignment="center"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="0.4"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Mis Datos Personales"
+                android:textColor="#000"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/perfil2" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1.5"
+                android:layout_weight="2.05"
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/idnickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="7dp"
+                    android:layout_marginRight="10dp"
+                    android:text="Nickname: "
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
                     android:id="@+id/idnameusuario2"
                     android:layout_width="wrap_content"
-                    android:layout_height="70dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="40dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/border"
-                    android:padding="10dp"
-                    android:text="Nombre de usuario:"
-                    android:textColor="#FFFFFF"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="7dp"
+                    android:text=""
+                    android:textColor="#000"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2.05"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/idemail"
                     android:layout_width="wrap_content"
-                    android:layout_height="70dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:text="E-mail: "
                     android:layout_marginRight="10dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/border"
-                    android:padding="10dp"
-                    android:text="Correo electrónico:"
-                    android:textColor="#FFFFFF"
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <EditText
+                    android:id="@+id/idemail2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:text=""
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="2.05"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/passwordperfil"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="3dp"
+                    android:text="Contraseña:"
+                    android:textColor="#000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/idpassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="7dp"
+                    android:password="true"
+                    android:text=""
+                    android:textColor="#000"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
             </LinearLayout>
@@ -83,7 +127,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight="1.2"
                 android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
@@ -97,26 +141,50 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_weight="2.05"
                 android:orientation="horizontal">
 
                 <ImageButton
                     android:id="@+id/idCerrarSesion"
-                    android:layout_width="182dp"
-                    android:layout_height="63dp"
+                    android:layout_width="50dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
                     android:layout_weight="1"
-                    android:src="?attr/homeAsUpIndicator" />
+                    android:background="@drawable/logout" />
 
                 <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
+                    android:id="@+id/cerrarsesion"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="2sp"
                     android:layout_weight="1"
-                    android:paddingTop="20dp"
+                    android:paddingTop="23dp"
                     android:text="Cerrar Sesión"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/actualizardatos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="60sp"
+                    android:layout_weight="1"
+                    android:paddingTop="20dp"
+                    android:text="Actualizar datos"
+                    android:textColor="#000000"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/idActualizardatos"
+                    android:layout_width="30dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/actualizar" />
+
             </LinearLayout>
 
         </LinearLayout>
