--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -8,6 +8,24 @@
     tools:context=".activities.ActivityRegistro">
 
     <EditText
+        android:id="@+id/passwordRegistro2"
+        android:layout_width="230dp"
+        android:layout_height="51dp"
+        android:background="@drawable/rounded_edit_text"
+        android:ems="10"
+        android:hint="Repita la contraseña"
+        android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#535353"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.573" />
+
+    <EditText
         android:id="@+id/email"
         android:layout_width="230dp"
         android:layout_height="51dp"
@@ -17,8 +35,8 @@
         android:hint="Correo electrónico"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:textColor="#515151"
-        android:textColorHint="#4E4E4E"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#535353"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -65,8 +83,8 @@
         android:hint="Nombre de usuario"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:textColor="#515151"
-        android:textColorHint="#4E4E4E"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#535353"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -83,8 +101,8 @@
         android:hint="Contraseña"
         android:inputType="textPassword"
         android:textAlignment="center"
-        android:textColor="#515151"
-        android:textColorHint="#4E4E4E"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#535353"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -109,8 +127,9 @@
         android:layout_width="108dp"
         android:layout_height="51dp"
         android:background="@drawable/rounded_edit_text"
+        android:backgroundTint="#FFFFFF"
         android:text="Regístrate"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
